--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -37,12 +37,12 @@ nav {
   }
 
   @media #{$large-and-up} {
-    a.button-collapse { display: none; }
+    a.sidenav-trigger { display: none; }
   }
 
 
   // Collapse button
-  .button-collapse {
+  .sidenav-trigger {
     float: left;
     position: relative;
     z-index: 1;
@@ -63,7 +63,6 @@ nav {
     display: inline-block;
     font-size: $navbar-brand-font-size;
     padding: 0;
-    white-space: nowrap;
 
     &.center {
       left: 50%;
@@ -118,13 +117,11 @@ nav {
       padding: 0;
 
       &.active {
-        a{
-          color: #333;
-        }
+        background-color: rgba(0,0,0,.1);
       }
     }
     a {
-      transition: all .3s;
+      transition: background-color .3s;
       font-size: $navbar-font-size;
       color: $navbar-font-color;
       display: block;
@@ -143,7 +140,7 @@ nav {
       }
 
       &:hover {
-        color: #333;
+        background-color: rgba(0,0,0,.1);
       }
     }
 
@@ -201,7 +198,7 @@ nav {
   nav.nav-extended .nav-wrapper {
     min-height: $navbar-height;
   }
-  nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
+  nav, nav .nav-wrapper i, nav a.sidenav-trigger, nav a.sidenav-trigger i {
     height: $navbar-height;
     line-height: $navbar-line-height;
   }
